src/objects/Campaign.object
<CustomObject>
    <fields>
        <fullName>Charge_Participants__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Set this field if Participants should be charged for this Campaign. This does not mean that all participant must be charged</description>
        <inlineHelpText>Set this field if Participants should be charged for this Campaign. This does not mean that all participant must be charged</inlineHelpText>
        <label>Charge Participants?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CoSponsor_RSVP_Name_and_Contact_Info__c</fullName>
        <defaultValue>&quot;Please include Full Name and all contact information (email, phone, fax)&quot;</defaultValue>
        <label>CoSponsor RSVP Name and Contact Info</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Comments_ENDO_FR__c</fullName>
        <label>Comments ENDO (FR)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Comments_Implants_FR__c</fullName>
        <label>Comments IMPL (FR)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Comments_MANT_FR__c</fullName>
        <label>Comments MANT (FR)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Comments_REST_FR__c</fullName>
        <label>Comments REST (FR)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Confirmed_Moderator__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Confirmed Moderator</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Confirmed Moderator</relationshipLabel>
        <relationshipName>Campaigns3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Confirmed_Speaker__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Confirmed Speaker</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Confirmed Speaker</relationshipLabel>
        <relationshipName>Campaigns2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Consecutive_trans__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Interpreter waits for the speaker to finish a sentence or an idea</description>
        <inlineHelpText>Fill in checkbox if this Session will be consecutive translation</inlineHelpText>
        <label>Consecutive Translation?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_Name_at_Venue__c</fullName>
        <description>Used on the North America Activity Request Form</description>
        <label>Contact Name at Venue</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Continuing_Training_FR__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field only for France</description>
        <label>Continuing Training (FR)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contract_Signed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contract Signed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contrat_d_honoraires__c</fullName>
        <description>To be used for France</description>
        <label>Contrat d’honoraires (FR)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>OUI</fullName>
                </value>
                <value>
                    <fullName>NON</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Convert_To__c</fullName>
        <label>Convert To:</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sales Lead</fullName>
                </value>
                <value>
                    <fullName>Opportunity</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cost_Centre__c</fullName>
        <description>Removed DI</description>
        <label>Cost Centre</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_Code_3_digit__c</fullName>
        <description>TFUS-000002404 Used by Eloqua</description>
        <label>Country Code (3-digit)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Country_Code_3_digit</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Organizing Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>ALL</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Belarus</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>BEX</fullName>
                </value>
                <value>
                    <fullName>Brazil</fullName>
                </value>
                <value>
                    <fullName>Canada</fullName>
                </value>
                <value>
                    <fullName>Denmark</fullName>
                </value>
                <value>
                    <fullName>Distributor Markets</fullName>
                </value>
                <value>
                    <fullName>Egypt</fullName>
                </value>
                <value>
                    <fullName>Finland</fullName>
                </value>
                <value>
                    <fullName>France</fullName>
                </value>
                <value>
                    <fullName>Germany</fullName>
                </value>
                <value>
                    <fullName>Holland</fullName>
                </value>
                <value>
                    <fullName>Hong Kong</fullName>
                </value>
                <value>
                    <fullName>HQ: DE</fullName>
                </value>
                <value>
                    <fullName>HQ: NL</fullName>
                </value>
                <value>
                    <fullName>HQ: SE</fullName>
                </value>
                <value>
                    <fullName>INDIA</fullName>
                </value>
                <value>
                    <fullName>Italy</fullName>
                </value>
                <value>
                    <fullName>Japan</fullName>
                </value>
                <value>
                    <fullName>Kazakhstan</fullName>
                </value>
                <value>
                    <fullName>Korea</fullName>
                </value>
                <value>
                    <fullName>Kuwait</fullName>
                </value>
                <value>
                    <fullName>Luxembourg</fullName>
                </value>
                <value>
                    <fullName>Malaysia</fullName>
                </value>
                <value>
                    <fullName>Morocco</fullName>
                </value>
                <value>
                    <fullName>New Zealand</fullName>
                </value>
                <value>
                    <fullName>Norway</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Course_California_Only__c</fullName>
        <description>California course code field to be visible for all North American campaign users.</description>
        <inlineHelpText>Special code for CE courses taking place in California.</inlineHelpText>
        <label>Course # (California Only)</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Course_Level_D__c</fullName>
        <label>Level</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Type</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Basic</fullName>
                </value>
                <value>
                    <fullName>Intermediate</fullName>
                </value>
                <value>
                    <fullName>Advanced</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Course_Title_and_Description__c</fullName>
        <defaultValue>&quot;“Enter title, course description and objectives only if developing a custom program&quot;</defaultValue>
        <description>Used for the North America Activity Request Form Process</description>
        <label>Course Title and Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Creator_User_Country__c</fullName>
        <formula>TEXT(CreatedBy.User_Country__c)</formula>
        <label>Creator User Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit__c</fullName>
        <label>Credit Provider</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credits__c</fullName>
        <label>Credits</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Credits_handled_by_DS_internal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Credits handled by DS internal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Credits_provided_by__c</fullName>
        <description>Defines if the credits for the course is provided by Dentsply Sirona or a 3rd party partner. Used for reporting.</description>
        <inlineHelpText>Defines if the credits for the course is provided by Dentsply Sirona or a 3rd party partner.</inlineHelpText>
        <label>Credits provided by?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Dentsply Sirona</fullName>
                    <label>Dentsply Sirona - Other</label>
                </value>
                <value>
                    <fullName>3rd party</fullName>
                </value>
                <value>
                    <fullName>Dentsply Sirona - ADA CERP</fullName>
                </value>
                <value>
                    <fullName>Dentsply Sirona - AGD PACE</fullName>
                </value>
                <value>
                    <fullName>No credits provided</fullName>
                    <default>true</default>
                    <label>No credits provided</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Currency__c</fullName>
        <description>Used in WF Criteria. Can also be used in Page Lyouts if needed</description>
        <formula>TEXT(CurrencyIsoCode)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The Currency of the Campaign</inlineHelpText>
        <label>Currency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CventEvents__EventStub__c</fullName>
        <externalId>true</externalId>
        <label>Event Stub</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CventEvents__SessionStub__c</fullName>
        <externalId>true</externalId>
        <label>Session Stub</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DB_Campaign_Tactic__c</fullName>
        <description>This is a field that is installed by and used with the Adoption Dashboard AppExchange package. If your org already has a similar field, you can change the reports that are part of the Adoption Dashboard package to use your custom field and then delete this field.</description>
        <label>DB Campaign Tactic</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Type</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Print Advertisement</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Employment Seminars</fullName>
                </value>
                <value>
                    <fullName>Webinars</fullName>
                </value>
                <value>
                    <fullName>Public Relations</fullName>
                </value>
                <value>
                    <fullName>Partners</fullName>
                </value>
                <value>
                    <fullName>Referral Program</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Lunches</fullName>
                </value>
                <value>
                    <fullName>Direct Mail</fullName>
                </value>
                <value>
                    <fullName>Sales Call Down</fullName>
                </value>
                <value>
                    <fullName>Online Banners/Ads</fullName>
                </value>
                <value>
                    <fullName>Internal Website</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Declaration_approved_by_HQ_FR__c</fullName>
        <description>Follow-up is demanding, on the request of the order Council- FOR FRANCE</description>
        <inlineHelpText>follow-up is demanding, on the request of the order Council</inlineHelpText>
        <label>Declaration approved by HQ (FR)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                    <default>true</default>
                    <label>Yes</label>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Declaration_to_order_council_email__c</fullName>
        <description>This field is used for sending out an automatic email alert when the field Declaration to order council = Yes.
The filed is populated only if this is true. The field is hidden from page layouts.</description>
        <label>Declaration to order council email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Declaration_to_the_order_Council_FR__c</fullName>
        <description>Follow-up is demanding, on the request of the order Council - FOR FRANCE</description>
        <inlineHelpText>Follow-up is demanding, on the request of the order Council</inlineHelpText>
        <label>Declaration  to the order Council (FR)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Describe_the_business_needs_goals__c</fullName>
        <label>Describe the business needs, goals</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Clinical Training (CE)</fullName>
                </value>
                <value>
                    <fullName>Product or Technical Training</fullName>
                </value>
                <value>
                    <fullName>Train the Trainer</fullName>
                </value>
                <value>
                    <fullName>Practice Management</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Double_Room_Rate_Per_Night__c</fullName>
        <label>Double Room Rate Per Night</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ENGINES_of_NSK__c</fullName>
        <label>ENGINES # of NSK (FR)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ENGINES_of_X_SMART_WO__c</fullName>
        <label>ENGINES # of X SMART +/WO</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ENGINES_of_X_SMART__c</fullName>
        <label>ENGINES # of X SMART</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Email_Template__c</fullName>
        <label>Email Template</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Emergency_Contact_and_Contact_Details__c</fullName>
        <inlineHelpText>Enter name of Emergency Contact and how to make contact.</inlineHelpText>
        <label>Emergency Contact and Contact Details</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>End_Date_of_Event__c</fullName>
        <description>Copy of End Date to be used on Email Templates</description>
        <formula>Parent_Event__r.EndDate</formula>
        <label>End Date of Event</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Entertainment_Actual__c</fullName>
        <label>Entertainment (Actual)</label>
        <summarizedField>Cost_Revenue_Transaction__c.Amount__c</summarizedField>
        <summaryFilterItems>
            <field>Cost_Revenue_Transaction__c.Type__c</field>
            <operation>equals</operation>
            <value>Entertainment</value>
        </summaryFilterItems>
        <summaryForeignKey>Cost_Revenue_Transaction__c.Campaign__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Entertainment_Budget__c</fullName>
        <label>Entertainment (Budget)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Equipment_AU__c</fullName>
        <description>To fill in equipment to bring to the Event</description>
        <label>Equipment (AU)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Equipment_Actual__c</fullName>
        <label>Equipment (Actual)</label>
        <summarizedField>Cost_Revenue_Transaction__c.Amount__c</summarizedField>
        <summaryFilterItems>
            <field>Cost_Revenue_Transaction__c.Type__c</field>
            <operation>equals</operation>
            <value>Equipment</value>
        </summaryFilterItems>
        <summaryForeignKey>Cost_Revenue_Transaction__c.Campaign__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Equipment_Budget__c</fullName>
        <label>Equipment (Budget)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Equipment_Contact_person_and_phone__c</fullName>
        <description>To be used for equipment booking</description>
        <inlineHelpText>To be used for equipment booking</inlineHelpText>
        <label>Equipment Contact person and phone (FR)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Equipment__c</fullName>
        <description>Add information about specific Equipment needed during the Session</description>
        <inlineHelpText>Add information about specific Equipment needed during the Session</inlineHelpText>
        <label>Equipment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Equipment_delivery_address_FR__c</fullName>
        <description>To be used for equipment booking</description>
        <inlineHelpText>To be used for equipment booking</inlineHelpText>
        <label>Equipment delivery address (FR)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Equipment_delivery_date_and_time__c</fullName>
        <description>To be used for equipment booking</description>
        <inlineHelpText>To be used for equipment booking</inlineHelpText>
        <label>Equipment delivery date and time (FR)</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Equipment_needed_FR__c</fullName>
        <description>Equipment needed for Fance</description>
        <inlineHelpText>Equipment needed</inlineHelpText>
        <label>Equipment needed (FR)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Equipment_of_Implant_units_FR__c</fullName>
        <description>Used in France to bring equipment to Campaigns</description>
        <inlineHelpText>Used in France to bring equipment to Campaigns</inlineHelpText>
        <label>Equipment # of Implant units (FR)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Equipment_of_dummy_implants_FR__c</fullName>
        <description>Used in France to bring equipment to Campaigns</description>
        <inlineHelpText>Used in France to bring equipment to Campaigns</inlineHelpText>
        <label>Equipment # of dummy implants (FR)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Equipment_of_mandibles_FR__c</fullName>
        <description>Used in France to bring equipment to Campaigns</description>
        <inlineHelpText>Used in France to bring equipment to Campaigns</inlineHelpText>
        <label>Equipment # of mandibles (FR)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Equipment_of_work_station_FR__c</fullName>
        <description>Used in France to bring equipment to Campaigns</description>
        <inlineHelpText>Used in France to bring equipment to Campaigns</inlineHelpText>
        <label>Equipment # of work station (FR)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Equipment_take_back_date__c</fullName>
        <description>To be used for equipment booking</description>
        <inlineHelpText>To be used for equipment booking</inlineHelpText>
        <label>Equipment take back date (FR)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Est_Cost_per_Participant__c</fullName>
        <description>The Estimated Cost is the budgeted cost on the Campaign divided by the Estimated number of participants. This figure differs from Budgeted cost/participant since the latter field calculates based on actual confirmed participants</description>
        <formula>Total_Cost_Budget__c  / Est_of_participants__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The Estimated Cost is the budgeted cost on the Campaign divided by the Estimated number of participants. This figure differs from Budgeted cost/participant since the latter field calculates based on actual confirmed participants</inlineHelpText>
        <label>Est Cost per Participant</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Est_of_participants__c</fullName>
        <label>Est # of participants</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Expertease_guided_surgery_hands_on_FR__c</fullName>
        <description>Used in France to bring equipment to Campaigns</description>
        <label>Expertease guided-surgery hands-on (FR)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ATIS</fullName>
                </value>
                <value>
                    <fullName>Ankylos</fullName>
                </value>
                <value>
                    <fullName>XiVE</fullName>
                </value>
                <value>
                    <fullName>AVANCEE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>External_Organizer_City__c</fullName>
        <description>Visiting City as entered on the Partner Account.</description>
        <formula>External_Organizer__r.BillingCity</formula>
        <inlineHelpText>Visiting City as entered on the Partner Account.</inlineHelpText>
        <label>External Organizer City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Organizer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>External Organizer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Campaigns (External Organizer)</relationshipLabel>
        <relationshipName>Campaigns2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>External_Project_ID__c</fullName>
        <description>The Project ID based from an external system. Note that this does NOT mean that any transactions based on this Project ID will be automatically integrated</description>
        <externalId>true</externalId>
        <inlineHelpText>The Project ID based from an external system. Note that this does NOT mean that any transactions based on this Project ID will be automatically integrated</inlineHelpText>
        <label>External Project ID</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Fibre_Lasers_FR__c</fullName>
        <label>Fibre Lasers (FR)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Follow_Up_Steps_completed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>TFUS-000005061</description>
        <label>Follow-Up Steps completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Food_Beverage_Actual__c</fullName>
        <label>Food &amp; Beverage (Actual)</label>
        <summarizedField>Cost_Revenue_Transaction__c.Amount__c</summarizedField>
        <summaryFilterItems>
            <field>Cost_Revenue_Transaction__c.Type__c</field>
            <operation>equals</operation>
            <value>Food &amp; Beverage</value>
        </summaryFilterItems>
        <summaryForeignKey>Cost_Revenue_Transaction__c.Campaign__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Food_Beverage_Budget__c</fullName>
        <label>Food &amp; Beverage (Budget)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Frialit__c</fullName>
        <formula>IF(INCLUDES( Brand__c , &quot;Frialit&quot;),TRUE,FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Frialit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Frios__c</fullName>
        <formula>IF(INCLUDES( Brand__c , &quot;Frios&quot;),TRUE,FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Frios</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GDWUniqueKey__c</fullName>
        <externalId>true</externalId>
        <label>GDW Unique Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Geographical_Target__c</fullName>
        <label>Geographical Target</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Local</fullName>
                </value>
                <value>
                    <fullName>National</fullName>
                </value>
                <value>
                    <fullName>International</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Gifts_Actual__c</fullName>
        <label>Gifts (Actual)</label>
        <summarizedField>Cost_Revenue_Transaction__c.Amount__c</summarizedField>
        <summaryFilterItems>
            <field>Cost_Revenue_Transaction__c.Type__c</field>
            <operation>equals</operation>
            <value>Gifts</value>
        </summaryFilterItems>
        <summaryForeignKey>Cost_Revenue_Transaction__c.Campaign__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Gifts_Budget__c</fullName>
        <label>Gifts (Budget)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Goggles_FR__c</fullName>
        <label>Goggles (FR)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>HQ_Campaign_Coordinator__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>HQ Campaign Coordinator</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Campaigns2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HQ_Coordinator_Country__c</fullName>
        <description>Displays the User Country of the HQ Campaign Coordinator. Used in reports and dashboards</description>
        <formula>TEXT( HQ_Campaign_Coordinator__r.User_Country__c )</formula>
        <inlineHelpText>Displays the User Country of the HQ Campaign Coordinator</inlineHelpText>
        <label>HQ Coordinator Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HQ_M_lndal_Coordinators_involved__c</fullName>
        <description>Shows the number of users from the HQ office at Mölndal involved as either Campaign Coordinator, HQ Campaign Coordinator or HQ (second) Campaign Coordinator</description>
        <formula>CASE(Campaign_Coordinator__c , 
&quot;005200000025lDq&quot;,1, 
&quot;00520000001C8Sn&quot;,1, 
&quot;005200000025lEo&quot;,1,  
0) 
+ 
IF(HQ_Campaign_Coordinator__c=Campaign_Coordinator__c,0, 
CASE(HQ_Campaign_Coordinator__c, 
&quot;005200000025lDq&quot;,1, 
&quot;00520000001C8Sn&quot;,1, 
&quot;005200000025lEo&quot;,1, 
0)) 
+ 
IF(OR(HQ_second_Campaign_Coordinator__c=HQ_Campaign_Coordinator__c,HQ_second_Campaign_Coordinator__c=Campaign_Coordinator__c),0, 
CASE(HQ_second_Campaign_Coordinator__c, 
&quot;005200000025lDq&quot;,1, 
&quot;00520000001C8Sn&quot;,1, 
&quot;005200000025lEo&quot;,1, 
0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Shows the number of users from the HQ office at Mölndal involved as either Campaign Coordinator, HQ Campaign Coordinator or HQ (second) Campaign Coordinator</inlineHelpText>
        <label># of HQ Mölndal Coordinators involved</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HQ_second_Campaign_Coordinator__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>To be used for HQ if there are more than on from HQ working on the Campaign</description>
        <inlineHelpText>To be used for HQ if there are more than on from HQ working on the Campaign</inlineHelpText>
        <label>HQ (second) Campaign Coordinator</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Campaigns3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Hands_on_Demonstration__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hands-on Demonstration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hands_on_Hours__c</fullName>
        <description>Used for reporting (CE-reporting). Shows the summarized value of session length (excluding session type &quot;Social Event&quot;) for sessions that has either &quot;Hands-on Demonstration&quot;=TRUE OR Session Type (D) = &quot;Hands-on Training&quot; - populated via APEX</description>
        <inlineHelpText>Summarized number of hours of hands-on in the Campaign</inlineHelpText>
        <label>Hands-on Hours</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hands_on_date_FR__c</fullName>
        <description>To be used for equipment booking</description>
        <inlineHelpText>To be used for equipment booking</inlineHelpText>
        <label>Hands on date (FR)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Has_Sessions__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is checked if the Campaign has Sessions</description>
        <inlineHelpText>This field is checked if the Campaign has Sessions</inlineHelpText>
        <label>Has Sessions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_Venue_been_contacted__c</fullName>
        <description>Used on the North America Activity Request Form</description>
        <label>Responsible to contact Venue?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>RMC</fullName>
                </value>
                <value>
                    <fullName>Co-Sponsor</fullName>
                </value>
                <value>
                    <fullName>DM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>